# sdpwm-firmware

./: CMakeLists.txt  Makefile  README.md
examples/: audio-output.py  levels-output.py  sine-output.py
fritzing/: breadboard.fzz
src/: core1.cpp  core1.h  core1a.cpp  led.cpp  led.h  main.cpp  pins.h  pwmdma.h  reset.cpp  reset.h  ringbuffer.cpp  ringbuffer.h  usb.cpp  usb.h  usb_descriptors.c
test/: test250224.py  test250224a.py  testbinary.py
